Fixed extra space on factsheet header

--- a/wp-content/themes/PPTTheme/sass/_page-templates.scss
+++ b/wp-content/themes/PPTTheme/sass/_page-templates.scss
@@ -1736,6 +1736,7 @@
     h1 {
       font-size: 75px;
       margin-top: 0;
+      margin-bottom: 0;
     }
     .page-description {
       padding-bottom: 30px;
